# LiraSearch

./: LICENSE  README.md  ShapeAlign  rocksdb_to_sdf.cpp
cif2ply/: CMakeLists.txt  main.cpp
cif2ply/include/: file_parser.h  skin_surface_processor.bak  skin_surface_processor.h  skin_surface_writer.h
cif2ply/tests/: GT-0004563.cif  GT-0004563.ply  GT-0004563.sdf  GT-0004563.sig  GT-0004583.cif  GT-0004583.ply  GT-0004583.sdf  cif2ply  super.ply
docker/: Dockerfile  lira_search_sdf.py  lira_super.py  restore_sdf_from_rocksdb.cpp
example/: rid_coeffs.csv  sh_coeffs.csv
